--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.web.resources.static-locations:classpath:/static/
 spring.mandatory-file-encoding=UTF-8
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
+spring.servlet.multipart.max-file-size=20MB
